# rmcs-resource-api

./: .gitignore  README.md
proto/: buffer.proto  common.proto  data.proto  device.proto  group.proto  log.proto  model.proto  slice.proto
proto/rmcs_resource_api/: buffer.proto  common.proto  data.proto  device.proto  group.proto  log.proto  model.proto  set.proto  slice.proto
python/: pyproject.toml
python/src/rmcs_resource_api/: buffer_pb2.py  buffer_pb2.pyi  buffer_pb2_grpc.py  common_pb2.py  common_pb2.pyi  common_pb2_grpc.py  data_pb2.py  data_pb2.pyi  data_pb2_grpc.py  device_pb2.py  device_pb2.pyi  device_pb2_grpc.py  group_pb2.py  group_pb2.pyi  group_pb2_grpc.py  log_pb2.py  log_pb2.pyi  log_pb2_grpc.py  model_pb2.py  model_pb2.pyi  model_pb2_grpc.py  set_pb2.py  set_pb2.pyi  set_pb2_grpc.py  slice_pb2.py  slice_pb2.pyi  slice_pb2_grpc.py
rust/: Cargo.toml  build.rs
rust/src/: buffer.rs  common.rs  data.rs  descriptor.rs  device.rs  group.rs  lib.rs  log.rs  model.rs  set.rs  slice.rs
web/: index.js  package.json  rollup.config.mjs
web/rmcs_resource_api/: buffer_grpc_web_pb.js  buffer_pb.js  common_pb.js  data_grpc_web_pb.js  data_pb.js  device_grpc_web_pb.js  device_pb.js  group_grpc_web_pb.js  group_pb.js  index.js  log_grpc_web_pb.js  log_pb.js  model_grpc_web_pb.js  model_pb.js  set_grpc_web_pb.js  set_pb.js  slice_grpc_web_pb.js  slice_pb.js
