[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "rmcs_resource_api"
version = "0.3.1"
authors = [
  { name="Chandra Wijaya Sentosa", email="chandra.w.sentosa@gmail.com" },
]
description = "GRPC api definition for rmcs resource"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "grpcio",
    "grpcio-tools"
]
